# exoclasma-note

./: README.md  pyproject.toml
src/exoclasma_note/: DaemonicPipeline_config.json  exoclasma_note.py
tests/testdata/EmilTestExoC/: EmilTestExoC.vcf.gz.tbi  _temp.EmilTestExoC.annovar.vcf.gz.tbi  unit.json
