[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "exoclasma-note2"
version = "1.0.0"
authors = [
	{ name = "Emil Viesná", email="regnveig@yandex.ru" },
	{ name = "Minja Fishman", email="minja-f@yandex.ru" }
]
description = "Exo-C Data Quality Check, Mapping, and Variant Calling, part of ExoClasma Suite"
keywords = ["bioinformatics", "annotation", "variant"]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">= 3.8"
dependencies = [
	"pandas",
	"pandarallel",
	"numpy",
	"pytabix"
]
classifiers = [
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Bio-Informatics",
	"Operating System :: POSIX :: Linux",
	"Natural Language :: English",
	"Development Status :: 3 - Alpha",
	"Environment :: Console"
]

[project.scripts]
exoclasma-note = "exoclasma_note.exoclasma_note:main"

[project.urls]
"Homepage" = "https://github.com/GalinaKoksharova/exoclasma-note2"
"Bug Tracker" = "https://github.com/GalinaKoksharova/exoclasma-note2/issues" 
